almost done with the refactoring